crates/inertia-axum-macros/tests/ui/fail/empty_component.rs
use inertia_axum_macros::InertiaPage;

#[derive(InertiaPage)]
#[inertia(component = "")]
struct Empty {}

fn main() {}
